Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4450

Broker-specific EXTERN includes and macros should not appear in generated QMF code if not used in broker

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.19
    • 0.21
    • QMF
    • None

    Description

      The qmf code generator creates header files using QPID_BROKER_EXTERN. These macros (and the header include that supports them) should not appear in code generated for stand-alone agents.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment