QPID-4450 - Don't generate QPID_BROKER_[CLASS_]EXTERN when the generated code is for a standalone (not in-broker) agent.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1411780 13f79535-47bb-0310-9956-ffa450edef68