qpid/cpp/managementgen/qmfgen/templates/Event.h
@@ -24,36 +24,38 @@
 /*MGEN:Root.Disclaimer*/
 
 #include "qpid/management/ManagementEvent.h"
+/*MGEN:IF(Root.InBroker)*/
 #include "qmf/BrokerImportExport.h"
+/*MGEN:ENDIF*/
 
 namespace qmf {
 /*MGEN:Event.OpenNamespaces*/
 
-QPID_BROKER_CLASS_EXTERN class Event/*MGEN:Event.NameCap*/ : public ::qpid::management::ManagementEvent
+/*MGEN:Root.ExternClass*/ class Event/*MGEN:Event.NameCap*/ : public ::qpid::management::ManagementEvent
 {
   private:
     static void writeSchema (std::string& schema);
     static uint8_t md5Sum[MD5_LEN];
-    QPID_BROKER_EXTERN static std::string packageName;
-    QPID_BROKER_EXTERN static std::string eventName;
+    /*MGEN:Root.ExternMethod*/ static std::string packageName;
+    /*MGEN:Root.ExternMethod*/ static std::string eventName;
 
 /*MGEN:Event.ArgDeclarations*/
 
   public:
     writeSchemaCall_t getWriteSchemaCall(void) { return writeSchema; }
 
-    QPID_BROKER_EXTERN Event/*MGEN:Event.NameCap*/(/*MGEN:Event.ConstructorArgs*/);
-    QPID_BROKER_EXTERN ~Event/*MGEN:Event.NameCap*/() {};
+    /*MGEN:Root.ExternMethod*/ Event/*MGEN:Event.NameCap*/(/*MGEN:Event.ConstructorArgs*/);
+    /*MGEN:Root.ExternMethod*/ ~Event/*MGEN:Event.NameCap*/() {};
 
     static void registerSelf(::qpid::management::ManagementAgent* agent);
     std::string& getPackageName() const { return packageName; }
     std::string& getEventName() const { return eventName; }
     uint8_t* getMd5Sum() const { return md5Sum; }
     uint8_t getSeverity() const { return /*MGEN:Event.Severity*/; }
-    QPID_BROKER_EXTERN void encode(std::string& buffer) const;
-    QPID_BROKER_EXTERN void mapEncode(::qpid::types::Variant::Map& map) const;
+    /*MGEN:Root.ExternMethod*/ void encode(std::string& buffer) const;
+    /*MGEN:Root.ExternMethod*/ void mapEncode(::qpid::types::Variant::Map& map) const;
 
-    QPID_BROKER_EXTERN static bool match(const std::string& evt, const std::string& pkg);
+    /*MGEN:Root.ExternMethod*/ static bool match(const std::string& evt, const std::string& pkg);
     static std::pair<std::string,std::string> getFullName() {
         return std::make_pair(packageName, eventName);
     }
