qpid/cpp/managementgen/qmfgen/schema.py
@@ -1476,8 +1476,11 @@ class SchemaClass:
 
   def genMethodIdDeclarations (self, stream, variables):
     number = 1
+    ext = ""
+    if variables['genForBroker']:
+        ext = "QPID_BROKER_EXTERN "
     for method in self.methods:
-      stream.write ("    QPID_BROKER_EXTERN static const uint32_t METHOD_" + method.getName().upper() +\
+      stream.write ("    " + ext + "static const uint32_t METHOD_" + method.getName().upper() +\
                     " = %d;\n" % number)
       number = number + 1
 
